--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Jingyu Li"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "PHD Student at Fudan University"
+  bio              : #"PHD Student at Fudan University"
   location         : "Shanghai, China"
   employer         :
   pubmed           : 
