--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Jingyu Li"
-description              : "PHD Student at Fudan University"
+description              : "PHD student at Fudan University"
 repository               : "SII-Whaleice/SII-Whaleice.github.io"
 google_scholar_stats_use_cdn : true
 
